dark-mode switch slider incorporated in the markup

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>Stopwatch</title>
   </head>
   <body>
+    <label class="switch btn-toggle" for="dark-mode">
+      <input type="checkbox" id="dark-mode" />
+      <span class="slider round"></span>
+    </label>
+
     <div class="wrapper">
       <div class="stopwatch-container">
         <h1>Stopwatch</h1>
